	description. This reduces the size of the output documents in some
	cases dramatically.

  * Introduction of a Windows DLL project for MS Visual Studio.

  * Fixed various errors in the documentation. Also added more man pages so
	all external functions are documented by a man page.

  * Improved the commenting in some of the code (added function descriptions
  	to the source files).

  * Decided that we can assume that there are never any \0's in text streams
	and therefore improved the textstream writing code.

  * Improved the speed of the library with the manytextboxes time trial.

  * Fixed the blank line before the ET at the end of text streams. This was a
	bug introduced by development of 0.2 and should not have affected
	any users.

  * Fixed the segmentation faults that were occuring. These were because of a
	malloc off by one bug, but my use of MALLOC_CHECK_ had obscured them
	during testing...

  * Improved the speed of the xref table creation, which should help the
	manypages timetrial.

  * Kids dictionary element of the Pages object is now handled as a special
	case because appending to this array was too slow. This shaved 13
	seconds off the manypages test run on my P II 300 laptop...

  * Changed the way the xref entries are counted. By the way, having the xref 
	entry count wrong causes xpdf to core dump.

  * Started implementing TIFF support, this means that libtiff is now required
	by Panda.

  * Added the binary stream. This is used for image data at the moment.

  * Added the xobject stream. This will later be used for inline image data,
	but is currently used to refer to the external image data that resides
	in the xobject.

  * Added the makedate function, which will represent any given date in the
	approved PDF format. Also added the nowdate function, which calls
	makedate for the time that is now...

  * Added the info object and added support for the tags within that object
	(for instance Author)