@@ -85,10 +85,11 @@ page  *pdfpage(pdf *, char *);
 object  *newobject(pdf *, int);
 void    adddictitem(dictionary *, char *, int, ...);
 void    *getdictvalue(dictionary *);
+void    freeObject(pdf *, object *);
 void    writeObject(pdf *, object *);
 void    writeDictionary(pdf *, object *, dictionary *);
 void    addchild(object *, object *);
-void    traverseObjects(pdf *, object *, traverseFunct);
+void    traverseObjects(pdf *, object *, int, traverseFunct);
 
 /******************************************************************************
   Text.c
